web/src/components/ClusterSelector/ClusterSelector.module.scss
.clusterSelector {
  .cluster {
    height: 100%;
    display: flex;
    flex-direction: column;
    text-decoration: none;
    padding: 1rem;
    min-width: 260px;
    color: var(--colorEmphasisMedium);
    opacity: 0.8;
    transition: color 0.2s;
    border-left: 6px solid transparent;

    .name {
      font-weight: bold;
    }

    .host,
    .description {
      font-size: 0.8rem;
    }

    .host {
      font-family: monospace;
    }

    .description {
      white-space: initial;
    }

    &:hover {
      border-color: var(--colorPrimary);
      color: var(--colorEmphasisHigh);
    }
  }
}

